--- a/client/src/index.css
+++ b/client/src/index.css
@@ -235,8 +235,25 @@
     @apply border-border;
   }
 
+  html {
+    height: 100%;
+    width: 100%;
+  }
+
   body {
     @apply font-sans antialiased bg-background text-foreground;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+
+  #root {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
